add 1.7.2 binary release to download page

--- a/www/genomethreader.org/htdocs/download.html
+++ b/www/genomethreader.org/htdocs/download.html
@@ -22,25 +22,32 @@ purpose, are hereby excluded.
 <p>Please <a href="mailto:gordon@gremme.org?subject=GenomeThreader for Linux ARM">contact me</a> if you are interested in GenomeThreader for Linux ARM.</p>
 
 <h2>Darwin_i386</h2>
+<a href="distributions/gth-1.7.2-Darwin_i386-32bit.tar.gz">gth-1.7.2-Darwin_i386-32bit.tar.gz</a> (2020-01-06)<br/>
+<a href="distributions/gth-1.7.2-Darwin_i386-64bit.tar.gz">gth-1.7.2-Darwin_i386-64bit.tar.gz</a> (2020-01-06)<br/>
 <a href="distributions/gth-1.7.1-Darwin_i386-32bit.tar.gz">gth-1.7.1-Darwin_i386-32bit.tar.gz</a> (2018-09-11)<br/>
 <a href="distributions/gth-1.7.1-Darwin_i386-64bit.tar.gz">gth-1.7.1-Darwin_i386-64bit.tar.gz</a> (2018-09-11)<br/>
 
 <h2>Linux_i386</h2>
+<a href="distributions/gth-1.7.2-Linux_i386-32bit.tar.gz">gth-1.7.2-Linux_i386-32bit.tar.gz</a> (2020-01-06)<br/>
 <a href="distributions/gth-1.7.1-Linux_i386-32bit.tar.gz">gth-1.7.1-Linux_i386-32bit.tar.gz</a> (2018-09-11)<br/>
 
 <h2>Linux_x86_64</h2>
+<a href="distributions/gth-1.7.2-Linux_x86_64-64bit.tar.gz">gth-1.7.2-Linux_x86_64-64bit.tar.gz</a> (2020-01-06)<br/>
 <a href="distributions/gth-1.7.1-Linux_x86_64-64bit.tar.gz">gth-1.7.1-Linux_x86_64-64bit.tar.gz</a> (2018-09-11)<br/>
 
 <h2>Linux_ppc64le</h2>
+<a href="distributions/gth-1.7.2-Linux_PowerPCle-64bit.tar.gz">gth-1.7.2-Linux_PowerPCle-64bit.tar.gz</a> (2020-01-06)<br/>
 <a href="distributions/gth-1.7.1-Linux_PowerPCle-64bit.tar.gz">gth-1.7.1-Linux_PowerPCle-64bit.tar.gz</a> (2018-09-11)<br/>
 
 <h2>Windows_i686</h2>
+<a href="distributions/gth-1.7.2-Windows_i686-32bit.zip">gth-1.7.2-Windows_i686-32bit.zip</a> (2020-01-06)<br/>
+<a href="distributions/gth-1.7.2-Windows_i686-64bit.zip">gth-1.7.2-Windows_i686-64bit.zip</a> (2020-01-06)<br/>
 <a href="distributions/gth-1.7.1-Windows_i686-32bit.zip">gth-1.7.1-Windows_i686-32bit.zip</a> (2018-09-11)<br/>
-<a href="distributions/gth-1.7.1-Windows_i686-64bit.zip">gth-1.7.1-Windows_i686-64bit.zip</a> (2018-00-11)<br/>
+<a href="distributions/gth-1.7.1-Windows_i686-64bit.zip">gth-1.7.1-Windows_i686-64bit.zip</a> (2018-09-11)<br/>
 
-<div id="footer">Copyright &copy; 2003-2018
+<div id="footer">Copyright &copy; 2003-2020
 <a href="mailto:gordon@gremme.org">Gordon Gremme</a>.
-Last update: 2018-09-11</div>
+Last update: 2020-01-06</div>
 
 <!-- Piwik -->
 <script type="text/javascript">
