--- a/www/genomethreader.org/htdocs/index.html
+++ b/www/genomethreader.org/htdocs/index.html
@@ -695,5 +695,7 @@ following dissertation:
 </ul>
 <div id="footer">
 Copyright &copy; 2003-2020 <a href="mailto:gordon@gremme.org">
-Gordon Gremme</a>. Last update: 2020-09-04
+Gordon Gremme</a>. Last update: 2020-09-10
 </div>
+</body>
+</html>
