--- a/www/genomethreader.org/htdocs/download.html
+++ b/www/genomethreader.org/htdocs/download.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html
-	PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Download GenomeThreader</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><title>Download GenomeThreader</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 <h1>Download <i>GenomeThreader</i></h1>
@@ -47,7 +49,7 @@ purpose, are hereby excluded.
 
 <div id="footer">Copyright &copy; 2003-2020
 <a href="mailto:gordon@gremme.org">Gordon Gremme</a>.
-Last update: 2020-01-11</div>
+Last update: 2020-09-10</div>
 
 </body>
 </html>
