--- a/www/genomethreader.org/htdocs/gthcases/softeng.html
+++ b/www/genomethreader.org/htdocs/gthcases/softeng.html
@@ -2,13 +2,15 @@
      "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>GBSK 2005 evaluation</title>
 </head>
 <body>
 
-<p><center><h3>Test cases from Gremme et al. 2005</h3></center></p>
+<div style="text-align:center">
+<h3>Test cases from Gremme et al. 2005</h3>
+</div>
 
-<p>
 <table border=1>
   <tr>
     <td></td>
@@ -63,7 +65,6 @@
     <td>*</td>
   </tr>
 </table>
-</p>
 
 <p>Back to <a href="../index.html">main page</a></p>
 
