add warning about code signing on macOS Catalina

--- a/www/genomethreader.org/htdocs/download.html
+++ b/www/genomethreader.org/htdocs/download.html
@@ -29,6 +29,12 @@ purpose, are hereby excluded.
 <a href="distributions/gth-1.7.1-Darwin_i386-32bit.tar.gz">gth-1.7.1-Darwin_i386-32bit.tar.gz</a> (2018-09-11)<br/>
 <a href="distributions/gth-1.7.1-Darwin_i386-64bit.tar.gz">gth-1.7.1-Darwin_i386-64bit.tar.gz</a> (2018-09-11)<br/>
 
+<p>
+If you get a warning on macOS Catalina (10.15) and later about opening an app
+from an unidentified developer see this
+<a href="https://support.apple.com/en-gb/guide/mac-help/mh40616/mac">guide</a>.
+</p>
+
 <h2>Linux_i386</h2>
 <a href="distributions/gth-1.7.3-Linux_i386-32bit.tar.gz">gth-1.7.3-Linux_i386-32bit.tar.gz</a> (2020-01-11)<br/>
 <a href="distributions/gth-1.7.1-Linux_i386-32bit.tar.gz">gth-1.7.1-Linux_i386-32bit.tar.gz</a> (2018-09-11)<br/>
